@startuml

title Classes - Class Diagram

class ChargeStation {
    - String locationName
    - Float lat 
    - Float lon

    + void addScooter(Scooter scooter)
    + ChargeStation(String locationName, Float lat, float Lon)
    + void chargeScooter(ElectricScooter scooter)
    + ChargeStation getChargeStation(String locationName    )
    + ChargeStation getNearestChargingStation(Float lat, Float lon)
}

class ElectricScooter {
    - Int chargeLevel

    + ElectricScooter(Float cost, Int chargeLevel)
    + Int  distanceCanRide()
    + Bool canRideDistance(Int distance)
    + void chargeScooter()
    + Int getChargeLevel()
    + void setChargeLevel(Int chargeLevel)
}

class Scooter {
    - String id
    - Float cost
    
    + Scooter(Float cost)
    + String getID()
    + Float getCost()
    + void Use()
}

class Customer {
    - String firstName
    - String lastName
    - String fullName 
    - Float money 
    
    + void rideScooterFor(Float distance)
    + Bool hasScooter(Scooter scooter)
    + Bool canAffordScooter(Float cost)
    + void purchaseScooter(Scooter)
    
    + String getFullName()
    + String getMoney()
}

class ScooterHire {
    - Array<Scooters> scooters
    - Array<Scooters> scootersAvailable
    - ChargeStation chargeStation
    - Dictionary currentlyHired
    
    + void chargeScooters();
    + void addScooter(Scooter scooter);
    + Scooter hireScooterTo(Customer cust);
    + void returnScooterFrom(Customer cust);   
}

ScooterHire "1" -- "Many" Scooter
Customer "1" -- "1" Scooter
ChargeStation "1" -- "Many" Scooter
ElectricScooter <|-- Scooter
ScooterHire "1" -- "1" ChargeStation

@enduml